<resources>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="app_name">Echoes</string>

    <string name="habithistory_seach">Please enter words to Search</string>
    <string name="main_menu">Main Menu</string>

    <string name="my_habits">My Habits</string>
    <string name="habit_add_button">Add Habit</string>

    <string name="habit_title">Habit Title:</string>
    <string name="habit_reason">Habit Reason:</string>
    <string name="habit_date">Date to Start:</string>
    <string name="habit_status">Habit Status:</string>
    <string name="habit_plan">Habit Plan</string>

    <string name="habit_events">Habit Events</string>
    <string name="habit_events_type">Habit Events Type:</string>

    <string name="habithistory">Habit History</string>

    <string-array name="habithistory_filter_list">
        <item>Please select a Habit Type</item>
    </string-array>

    <string name="habit_events_map">View Events Map</string>
    <string name="habit_events_add_button">Add Habit Event</string>

    <string name="comment">Comment: </string>
    <string name="date">Date: </string>

    <string name="search">Search</string>
    <string name="search_hint">Search word Habit Event\'s comment</string>

    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="Username">Username:</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="userprofile_title">User Profile</string>
    <string name="email">Email:</string>
    <string name="phoneNumber">Phone Number:</string>

    <string name="following">Following</string>
    <string name="follower">Followers</string>

    <string name="user_message">User Message</string>

    <string name="habits_following">Habits Following</string>

    <string name="searched_user">Searched Users</string>
    <string name="next_page">Next Page</string>

    <string name="search_user_hint">Please enter the username for search</string>

    <string name="noUser_matched">No User Matched or Check Network Connection</string>

    <string name="followed">Followed</string>
    <string name="sentRequest">Pending Following Request</string>
    <string name="follow">Follow + </string>

    <string name="receivedRequest">Received Following Requests</string>

    <string name="userMessage">My Messages</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <string name="network_error">Network Error</string>

    <string name="followingHabitEvents">My Following Habit Events</string>
    <string name="title_activity_maps">Map</string>

    <string name="select_loc">Select a Location</string>
    <string name="save_selected_loc">Save selected location</string>

    <string name="recentEventsMap">See my Followings most recent habit event for each habit on map</string>

    <string name="highlightLoc">Highlight Habit events within 5km of my current Location</string>

    <string name="userProfile_networkError">You can only see other users profile when you are online.</string>
    <string name="userMessage_networkError">You can only see your message from other users when you are online.</string>
    <string name="habitsFollowing_networkError">You can only see all Habits from your followings when you are online.</string>

    <string name="view_comments">View Comments</string>
    <string name="kudos">Kudos</string>

    <string name="send_comment">Send Comment</string>
    <string name="comments">Comments</string>
    <string name="kudos_networkError">Cannot view Comments and Kudos when you are offline.</string>

</resources>
