<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Team cmput301f17t19, CMPUT301, University of Alberta - All Rights Reserved. You may use, distribute, or modify this code under terms and conditions of the Code of Students Behaviour at University of Alberta
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cmput301f17t19.echoes.HabitsFollowingActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@drawable/first_layer"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <LinearLayout
        android:id="@+id/habitsFollowing_Layout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/search_user_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:inputType="text"
                android:hint="@string/search_user_hint"
                android:textSize="16sp"
                android:maxLines="1"
                android:layout_marginRight="8dp"/>

            <Button
                android:id="@+id/search_user_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/search"/>

        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/habitstatus_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="63"/>

        <Button
            android:id="@+id/recentEventsMap_Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recentEventsMap"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/habitsFollowing_NetworkError"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/habitsFollowing_networkError"
        android:layout_margin="16dp"/>

</LinearLayout>
