<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/habit_history_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cmput301f17t19.echoes.Activities.HabitHistoryActivity"
    android:background="@color/white">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorAccent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <EditText
            android:id="@+id/search_comment_edittext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="6"
            android:inputType="text"
            android:textColorHint="@color/black"
            android:hint="@string/search_hint"
            android:textSize="17sp"
            android:maxLines="1"
            android:layout_marginEnd="8dp"
            android:background="@color/white"/>

        <Button
            android:id="@+id/search_comment_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:background="@drawable/btn"
            android:text="@string/search"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/habit_events_type_layout"
        android:layout_gravity="start"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="8dp">

        <TextView
            android:id="@+id/habit_events_type_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_events_type"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginRight="8dp"
            android:background="@color/white"/>

        <Spinner
            android:id="@+id/habithistory_filter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/habithistory_filter_list"
            android:spinnerMode="dropdown"
            android:background="@color/white"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/habitevents_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="63"/>

    <LinearLayout
        android:id="@+id/habit_events_buttons_layout"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/habitevents_map"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/habit_events_map"
            android:textColor="@color/white"
            android:background="@drawable/btn"
            android:layout_marginRight="16dp"/>

        <Button
            android:id="@+id/habitevents_add_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/habit_events_add_button"
            android:textColor="@color/white"
            android:background="@drawable/btn"
            android:layout_marginLeft="16dp"/>

    </LinearLayout>

</LinearLayout>
