<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Team cmput301f17t19, CMPUT301, University of Alberta - All Rights Reserved. You may use, distribute, or modify this code under terms and conditions of the Code of Students Behaviour at University of Alberta
  -->

<!--View for each Habit overview display in my Habits-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_title"
            android:textColor="@color/black"
            android:textSize="23dp"
            android:textStyle="bold"
            android:layout_marginRight="8dp"/>
        
        <TextView
            android:id="@+id/habitOverview_title"
            android:layout_width="match_parent"
            android:textStyle="bold"
            android:textSize="23dp"
            android:textColor="@color/black"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/habit_reason"
            android:textSize="15dp"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/habitOverview_reason"
            android:layout_width="match_parent"
            android:textSize="15dp"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/habit_date"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/habitOverview_date"
            android:textSize="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/habit_plan"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:id="@+id/habitPlanTextView"
            android:layout_width="match_parent"
            android:textSize="15dp"
            android:layout_height="wrap_content" />



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:text="@string/habit_status"
            android:layout_marginRight="8dp"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/habitOverview_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_margin="4dp"/>

            <ProgressBar
                android:id="@+id/habit_status_progressBar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>

    <include
        android:id="@+id/comments_kudos_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/comments_kudos_layout"
        android:layout_margin="4dp"/>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#c0c0c0"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/iron"
        />



</LinearLayout>