<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Team cmput301f17t19, CMPUT301, University of Alberta - All Rights Reserved. You may use, distribute, or modify this code under terms and conditions of the Code of Students Behaviour at University of Alberta
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/profile_layout"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cmput301f17t19.echoes.Activities.UserProfileActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/redPink"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

    <TextView
        android:layout_alignParentTop="true"
        android:layout_marginTop="35dp"
        android:layout_height="190dp"
        android:layout_width="match_parent"
        android:background="@color/redPink"
        />


    <LinearLayout
        android:id="@+id/profile_info_layout"
        android:layout_width="match_parent"
        android:layout_below="@+id/my_toolbar"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >


        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/user_profile_icon"
            app:civ_border_width="2dp"
            android:layout_marginTop="110dp"
            android:layout_gravity="center"
            app:civ_border_color="#FF000000"/>

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/Username"/>

        <TextView
            android:id="@+id/profile_comment"
            android:layout_width="match_parent"
            android:gravity="center"
            android:textStyle="italic"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="64dp"
            android:layout_marginLeft="64dp"
            android:text="@string/comment"
            android:textColor="@color/black"
            android:textSize="25dp"/>

        <LinearLayout
            android:id="@+id/email_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/email_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/profile_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/email"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/phone_layout"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="8dp">

            <TextView
                android:id="@+id/phone_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/phoneNumber"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/profile_phone_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/phoneNumber"/>

        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/follow_layout"
        android:layout_below="@+id/profile_info_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/followers_layout"
            android:layout_width="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/follower_num"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="3dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:textColor="@color/black" />

            <TextView
                android:id="@+id/followers_title"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                android:layout_margin="4dp"
                android:text="@string/follower"
                android:textColor="@color/black" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/following_layout"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/following_num"
                android:layout_width="wrap_content"
                android:layout_marginBottom="3dp"
                android:textStyle="bold"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_gravity="center" />

            <TextView
                android:id="@+id/following_title"
                android:layout_width="wrap_content"
                android:textSize="20dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:textStyle="bold"
                android:text="@string/following"
                android:textColor="@color/black" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/logout_Button"
        android:layout_centerHorizontal="true"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:background="@drawable/btn2"
        android:text="@string/logout"/>

    <Button
        android:id="@+id/Request_Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:background="@drawable/btn2"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/userProfile_newtorkError"
        android:layout_width="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:textSize="13sp"
        android:textStyle="bold"
       android:layout_centerHorizontal="true"
        android:text="@string/userProfile_networkError"
        android:layout_margin="16dp"/>

</RelativeLayout>
