<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) Team cmput301f17t19, CMPUT301, University of Alberta - All Rights Reserved. You may use, distribute, or modify this code under terms and conditions of the Code of Students Behaviour at University of Alberta
  -->

<!--View for each habit event in HabitEventsList. Displayed in Habit History-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white2"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
  >

    <LinearLayout
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:id="@+id/top"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
       >

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="18dp"
            android:layout_height="wrap_content"
            android:text="@string/habit_title"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:textStyle="bold"
            android:textSize="18dp"
            android:id="@+id/habitevent_type_textView"
            android:layout_width="match_parent"
            android:textColor="@color/black"
            android:layout_height="wrap_content"/>

    </LinearLayout>





    <ImageView
        android:layout_alignParentBottom="true"
        android:id="@+id/habitevent_photo"
        android:layout_below="@+id/d"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="fitXY"
       />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:layout_margin="25dp"
        android:id="@+id/c"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textColor="@color/black"
            android:text="@string/comment"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/habitevent_comment"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/d"
        android:layout_marginLeft="25dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/c"
        android:layout_marginBottom="15dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:textColor="@color/black"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginRight="8dp"/>

        <TextView
            android:id="@+id/habitevent_date"
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>





</RelativeLayout>
